Alignment fix for old Firefox.

--- a/app/assets/stylesheets/_site.scss
+++ b/app/assets/stylesheets/_site.scss
@@ -1208,6 +1208,7 @@ $hamburger-dot: 4px;
         align-items: center;
         flex-direction: column;
         background-color: transparent;
+        cursor: pointer;
         &:hover {
             text-decoration: none;
         }
